findbugs DM_NUMBER_CTOR FE_TEST_IF_EQUAL_TO_NOT_A_NUMBER
svn path=/dasCore/community/autoplot2011/trunk/; revision=5577